@@ -1,6 +1,6 @@
 /*******************************************************************************
     Creme is a free/open-source Customer Relationship Management software
-    Copyright (C) 2009-2023  Hybird
+    Copyright (C) 2009-2025  Hybird
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as published by
@@ -162,34 +162,6 @@ creme.forms.DateTimePicker.setDate = function(self, date) {
 
 creme.forms.DateTimePicker.set = function(self, year, month, day, hour, minute) {
     creme.forms.DateTimePicker.setDate(self, new Date(year, month, day, hour, minute));
-};
-
-
-// TODO : create a real widget instead
-creme.forms.toImportField = function(table_id, target_query, speed) {
-    speed = speed !== undefined ? speed : 'normal';
-
-    var $table = $('#' + table_id);
-    var $csv_select    = $table.find('.csv_col_select');
-    var $fields_select = $table.find(target_query);
-
-    function not_in_csv() {
-        return $csv_select.val() === '0';
-    }
-
-    if (not_in_csv()) {
-        $fields_select.hide();
-    }
-
-    function handleColChange() {
-        if (not_in_csv()) {
-            $fields_select.hide(speed);
-        } else {
-            $fields_select.show(speed);
-        }
-    }
-
-    $csv_select.on('change', handleColChange);
 };
 
 // TODO : create a real form controller with better lifecycle (not just a css class) and
