@@ -1,21 +1,16 @@
 {% load i18n %}
 {% with id=widget.attrs.id %}
-<table {# name="{{widget.name}}" #} {% include 'django/forms/widgets/attrs.html' %}>
+<table {# name="{{widget.name}}" #} {% include 'django/forms/widgets/attrs.html' %} widget="ui-import-field" class="ui-creme-widget widget-auto ui-import-field">
     <tbody>
         <tr>
-            <td class="csv_column_select">
+            <td class="csv_column_select import-field-select">
                 {% include 'creme_core/forms/widgets/select.html' with widget=widget.column_select %}
             </td>
             {% if widget.propose_creation %}
-            <td class="csv_cfvalue_creation">&nbsp;
+            <td class="csv_cfvalue_creation import-field-details">&nbsp;
                 <label for="{{id}}_create">{% translate 'Create if not found?' %}:
                     <input type="checkbox" id="{{id}}_create" name="{{widget.name}}_create"{% if widget.can_create %} checked{% endif %}>
                 </label>
-                <script type="text/javascript">
-                    $(document).ready(function() {
-                        creme.forms.toImportField('{{id}}', '.csv_cfvalue_creation');
-                    });
-                </script>
             </td>
             {% endif %}
             <td>&nbsp;
